fix: 🐛 waitingroom spacing to top

--- a/src/components/waitingRoom/waitingRoom.styles.scss
+++ b/src/components/waitingRoom/waitingRoom.styles.scss
@@ -15,7 +15,6 @@
 	}
 
 	&__contentWrapper {
-		align-self: center;
 		padding: $grid-base-five $grid-base-two;
 		width: 100%;
 		max-width: 1370px;
